--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -1,1 +1,6 @@
-Ciabatta
+<!-- Section for the main image  -->
+<section>
+	<div class="main-picture">
+		<div class="main-image"></div>
+	</div>	
+</section>
