--- a/app/assets/stylesheets/statics.scss
+++ b/app/assets/stylesheets/statics.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the statics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.main-picture .main-image {
+	background-image: url("coit.png");
+	background-size: cover;
+	width: 100%;
+	height: 450px;
+}
+
+.main-picture {
+	position: relative;
+}
