--- a/app/assets/stylesheets/statics.scss
+++ b/app/assets/stylesheets/statics.scss
@@ -11,3 +11,13 @@
 .main-picture {
 	position: relative;
 }
+
+#buttoncoit{
+	padding-left: 47px;
+	padding-right: 47px;
+}
+
+#buttonalcatraz {
+	padding-left: 27px;
+	padding-right: 27px;
+}
