updated golden gate

--- a/app/views/franciscos/coit.html.erb
+++ b/app/views/franciscos/coit.html.erb
@@ -1,23 +1,6 @@
-<div class="container">
-	<div class="row">
-	<br>
-		<div class="col-md-3">
-			<div class="product-image-container">
-				<center>
-					<img src="/assets/coitone.jpg" id="picture"/>
-				</center>
-			</div>	
-		</div>
-
-		<div class="col-md-3">
-			<div class="product-image-container">
-				<center>
-					<img src="/assets/coitone.jpg" id="picture"/>
-				</center>
-			</div>	
-		</div>
-	</div>
-</div>
+<center>
+  <h1>Coit Tower</h1>
+</center>
 
 <div class="container">
          <div class="bs-example">
@@ -60,6 +43,30 @@
 </div>
 </div>
 
+<center>
+  <h1>Newest</h1>
+</center>
+
+<div class="container">
+  <div class="row">
+  <br>
+    <div class="col-md-3">
+      <div class="product-image-container">
+        <center>
+          <img src="/assets/coitone.jpg" id="picture"/>
+        </center>
+      </div>  
+    </div>
+
+    <div class="col-md-3">
+      <div class="product-image-container">
+        <center>
+          <img src="/assets/coitone.jpg" id="picture"/>
+        </center>
+      </div>  
+    </div>
+  </div>
+</div>
   <!-- jquery -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
