--- a/app/views/franciscos/ferrybuilding.html.erb
+++ b/app/views/franciscos/ferrybuilding.html.erb
@@ -1,5 +1,5 @@
 <center>
-  <h1>Coit Tower</h1>
+  <h1>Ferry Building</h1>
 </center>
 
 <div class="container">
@@ -14,25 +14,25 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="active item">
-                <img src="/assets/coitnorth.jpg" alt="#" class="img-responsive" alt="Responsive image">
+                <img src="/assets/ferrynorth.jpg" alt="#" class="img-responsive" alt="Responsive image">
             <div class="carousel-caption">
                   <h3>Link to Profile</h3>
                 </div>
             </div>
             <div class="item">
-                <img src="/assets/coiteast.jpg" alt="#" class="img-responsive" alt="Responsive image">
+                <img src="/assets/ferryeast.jpg" alt="#" class="img-responsive" alt="Responsive image">
                 <div class="carousel-caption">
                   <h3> Link to Profile</h3>
                 </div>
             </div>
             <div class="item">
-                <img src="/assets/coitsouth.jpg" alt="#" class="img-responsive" alt="Responsive image">
+                <img src="/assets/ferrysouth.jpg" alt="#" class="img-responsive" alt="Responsive image">
                 <div class="carousel-caption">
                   <h3>Link to Profile</h3>
                 </div>
             </div>
             <div class="item">
-                <img src="/assets/coitwest.jpg" alt="#" class="img-responsive" alt="Responsive image">
+                <img src="/assets/ferrywest.jpg" alt="#" class="img-responsive" alt="Responsive image">
                 <div class="carousel-caption">
                   <h3>Link to Profile</h3>
                 </div>
@@ -59,7 +59,7 @@
     <div class="col-md-3">
       <div class="product-image-container">
         <center>
-          <img src="/assets/coitnorth.jpg" id="picture"/>
+          <img src="/assets/ferrynorth.jpg" id="picture"/>
         </center>
       </div>  
     </div>
@@ -67,21 +67,21 @@
     <div class="col-md-3">
       <div class="product-image-container">
         <center>
-          <img src="/assets/coiteast.jpg" id="picture"/>
+          <img src="/assets/ferryeast.jpg" id="picture"/>
         </center>
       </div>  
     </div>
     <div class="col-md-3">
       <div class="product-image-container">
         <center>
-          <img src="/assets/coitsouth.jpg" id="picture"/>
+          <img src="/assets/ferrysouth.jpg" id="picture"/>
         </center>
       </div>  
     </div>
     <div class="col-md-3">
       <div class="product-image-container">
         <center>
-          <img src="/assets/coitwest.jpg" id="picture"/>
+          <img src="/assets/ferrywest.jpg" id="picture"/>
         </center>
       </div>  
     </div>
