--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -17,7 +17,7 @@
 			<%= link_to "GOLDEN GATE", goldengate_path, class: "btn btn-primary" %>
 		</div>
 		<div class="col xs-3">
-			<%= link_to "SUTRO TOWER", coit_path, class: "btn btn-primary" %>
+			<%= link_to "SUTRO TOWER", sutro_path, class: "btn btn-primary" %>
 		</div>
 	</div>
 </div>
