--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -4,20 +4,20 @@
 		<div class="main-image"></div>
 	</div>	
 </section>
-<div class="container">
+<div class="container-fluid">
 	<div class="row">
 		<br>
-		<div class="col-xs-3">
+		<div class="col-md-3">
 			<%= link_to "COIT", coit_path, class: "btn btn-primary", id: "buttoncoit" %>
 		</div>
-		<div class="col-xs-3">
+		<div class="col-md-3">
 			<%= link_to "FERRY BUILDING", ferrybuilding_path, class: "btn btn-primary", id: "buttonalcatraz" %>
 		</div>
-		<div class="col-xs-3">
-			<%= link_to "GOLDEN GATE", goldengate_path, class: "btn btn-primary" %>
+		<div class="col-md-3">
+			<%= link_to "B of A BUILDING", fivefivefive_path, class: "btn btn-primary" %>
 		</div>
-		<div class="col xs-3">
-			<%= link_to "SUTRO TOWER", sutro_path, class: "btn btn-primary" %>
+		<div class="col-md-3">
+			<%= link_to "GOLDEN GATE", goldengate_path, class: "btn btn-primary" %>
 		</div>
 	</div>
 </div>
