--- a/app/views/franciscos/goldengate.html.erb
+++ b/app/views/franciscos/goldengate.html.erb
@@ -1,90 +1,7 @@
 <center>
   <h1>Golden Gate Bridge</h1>
 </center>
-
-<div class="container">
-         <div class="bs-example">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Carousel indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>   
-        <!-- Wrapper for carousel items -->
-        <div class="carousel-inner">
-            <div class="active item">
-                <img src="/assets/ggone.png" alt="#" class="img-responsive" alt="Responsive image">
-            <div class="carousel-caption">
-                  <h3>Link to Profile</h3>
-                </div>
-            </div>
-            <div class="item">
-                <img src="/assets/ggtwo.png" alt="#" class="img-responsive" alt="Responsive image">
-                <div class="carousel-caption">
-                  <h3> Link to Profile</h3>
-                </div>
-            </div>
-            <div class="item">
-                <img src="/assets/ggsix.jpg" alt="#" class="img-responsive" alt="Responsive image">
-                <div class="carousel-caption">
-                  <h3>Link to Profile</h3>
-                </div>
-            </div>
-            <div class="item">
-                <img src="/assets/ggeight.jpg" alt="#" class="img-responsive" alt="Responsive image">
-                <div class="carousel-caption">
-                  <h3>Link to Profile</h3>
-                </div>
-            </div>
-        </div>
-        <!-- Carousel controls -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-    </div>
-</div>
-</div>
-
+<br>
 <center>
-  <h1>Newest</h1>
+    <h1>Coming Soon</h1>
 </center>
-
-
-<div class="container">
-	<div class="row">
-	<br>
-		<div class="col-md-3">
-			<div class="product-image-container">
-				<center>
-					<img src="/assets/ggone.png" id="picture"/>
-				</center>
-			</div>	
-		</div>
-
-		<div class="col-md-3">
-			<div class="product-image-container">
-				<center>
-					<img src="/assets/ggtwo.png" id="picture"/>
-				</center>
-			</div>	
-		</div>
-		<div class="col-md-3">
-			<div class="product-image-container">
-				<center>
-					<img src="/assets/ggsix.jpg" id="picture"/>
-				</center>
-			</div>	
-		</div>
-		<div class="col-md-3">
-			<div class="product-image-container">
-				<center>
-					<img src="/assets/ggeight.jpg" id="picture"/>
-				</center>
-			</div>	
-		</div>
-	</div>
-</div>
