updating home button

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,8 +17,8 @@
 	margin-bottom: 0px;
 }
 
-.home {
-	color: #FFFFFF;
+#home .home {
+	font-family: 'PT Sans';
 	font-size: 30px;
 	font-weight: 900;
 	line-height: 48px;
