--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 		  <div class="container-fluid">
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li><%= link_to "Home", root_path, class: "home" %></li>
+		        <li id="home"><%= link_to "Home", root_path, class: "home" %></li>
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
 				<!-- login/logout -->
