--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -7,17 +7,29 @@
 <div class="container-fluid">
 	<div class="row">
 		<br>
-		<div class="col-md-3">
-			<%= link_to "COIT", coit_path, class: "btn btn-primary", id: "buttoncoit" %>
+		<div class="col-md-3 col-xs-3">
+			<center>
+				<%= link_to "COIT", coit_path, class: "btn btn-primary", id: "buttoncoit" %>
+			</center>
+			
 		</div>
-		<div class="col-md-3">
-			<%= link_to "FERRY BUILDING", ferrybuilding_path, class: "btn btn-primary", id: "buttonalcatraz" %>
+		<div class="col-md-3 col-xs-3">
+			<center>
+				<%= link_to "FERRY BUILDING", ferrybuilding_path, class: "btn btn-primary", id: "buttonalcatraz" %>
+			</center>
+			
 		</div>
-		<div class="col-md-3">
-			<%= link_to "B of A BUILDING", fivefivefive_path, class: "btn btn-primary" %>
+		<div class="col-md-3 col-xs-3">
+			<center>
+				<%= link_to "B of A BUILDING", fivefivefive_path, class: "btn btn-primary" %>
+			</center>
+			
 		</div>
-		<div class="col-md-3">
-			<%= link_to "GOLDEN GATE", goldengate_path, class: "btn btn-primary" %>
+		<div class="col-md-3 col-xs-3">
+			<center>
+				<%= link_to "GOLDEN GATE", goldengate_path, class: "btn btn-primary" %>
+			</center>
+			
 		</div>
 	</div>
 </div>
