--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -1,7 +1,12 @@
 <!-- Section for the main image  -->
 <section>
 	<div class="main-picture">
-		<div class="main-image"></div>
+		<div class="main-image">
+			<center>
+				<h2 id="explore">Explore locations with perspective</h2>
+				
+			</center>
+		</div>
 	</div>	
 </section>
 <div class="container-fluid">
