fixed padding on carosel

--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -3,6 +3,7 @@
 	<div class="main-picture">
 		<div class="main-image">
 			<center>
+				<br>
 				<h2 id="explore">Explore locations with perspective</h2>
 				
 			</center>
@@ -10,6 +11,12 @@
 	</div>	
 </section>
 <div class="container-fluid">
+	<div class="row">
+		<br>
+		<center>
+			<h1>San Francisco</h1>
+		</center>
+	</div>
 	<div class="row">
 		<br>
 		<div class="col-md-3 col-xs-3">
