--- a/app/views/franciscos/fivefivefive.html.erb
+++ b/app/views/franciscos/fivefivefive.html.erb
@@ -2,7 +2,7 @@
   <h1>555 California</h1>
 </center>
 
-<div class="container">
+<div class="container-fluid" id="carouselbox">
          <div class="bs-example">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Carousel indicators -->
