--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
 		        <li id="home"><%= link_to "Home", root_path, class: "home" %></li>
+		        <li id="title"><%= full_title(yield(:title)) %></li>
+		      </ul>
+		      <ul class="nav navbar-nav pull-right">
+		      	
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
 				<!-- login/logout -->
