--- a/app/views/franciscos/ferrybuilding.html.erb
+++ b/app/views/franciscos/ferrybuilding.html.erb
@@ -1,6 +1,4 @@
-<center>
-  <h1>Ferry Building</h1>
-</center>
+<% provide(:title, "Ferry Building") %>
 
 <div class="container-fluid" id="carouselbox">
          <div class="bs-example">
@@ -12,7 +10,7 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>   
         <!-- Wrapper for carousel items -->
-        <div class="carousel-inner">
+        <div class="carousel-inner" id="carousel-height">
             <div class="active item">
                 <img src="/assets/ferrynorth.jpg" alt="#" class="img-responsive" alt="Responsive image">
             <div class="carousel-caption">
