--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -17,6 +17,7 @@
 			<h1>San Francisco</h1>
 		</center>
 	</div>
+	<br>
 	<div class="row">
 		<br>
 		<div class="col-md-3 col-xs-3">
@@ -39,7 +40,7 @@
 		</div>
 		<div class="col-md-3 col-xs-3">
 			<center>
-				<%= link_to "GOLDEN GATE", goldengate_path, class: "btn btn-primary" %>
+				<%= link_to "TRANSAMERICA", transamerica_path, class: "btn btn-primary" %>
 			</center>
 			
 		</div>
