--- a/app/views/franciscos/coit.html.erb
+++ b/app/views/franciscos/coit.html.erb
@@ -8,31 +8,32 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>   
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner" id="carousel-height">
             <div class="active item">
                 <img src="/assets/coitnorth.jpg" alt="#" class="img-responsive" alt="Responsive image">
             <div class="carousel-caption">
-                  <h3>Link to Profile</h3>
+                  <!-- <h3>Link to Profile</h3> -->
                 </div>
             </div>
             <div class="item">
                 <img src="/assets/coiteast.jpg" alt="#" class="img-responsive" alt="Responsive image">
                 <div class="carousel-caption">
-                  <h3> Link to Profile</h3>
+                  <!-- <h3> Link to Profile</h3> -->
                 </div>
             </div>
             <div class="item">
                 <img src="/assets/coitsouth.jpg" alt="#" class="img-responsive" alt="Responsive image">
                 <div class="carousel-caption">
-                  <h3>Link to Profile</h3>
+                  <!-- <h3>Link to Profile</h3> -->
                 </div>
             </div>
             <div class="item">
                 <img src="/assets/coitwest.jpg" alt="#" class="img-responsive" alt="Responsive image">
                 <div class="carousel-caption">
-                  <h3>Link to Profile</h3>
+                  <!-- <h3>Link to Profile</h3> -->
                 </div>
             </div>
         </div>
