--- a/app/views/franciscos/transamerica.erb
+++ b/app/views/franciscos/transamerica.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "555 California") %>
+<% provide(:title, "TransAmerica") %>
 
 <div class="container-fluid" id="carouselbox">
          <div class="bs-example">
@@ -13,25 +13,25 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner" id="carousel-height">
             <div class="active item">
-                <img src="/assets/bofanorth.jpg" alt="#" class="img-responsive" alt="Responsive image">
+                <img src="/assets/transamericanorth.jpg" alt="#" class="img-responsive" alt="Responsive image">
             <div class="carousel-caption">
                   <!-- <h3>Link to Profile</h3> -->
                 </div>
             </div>
             <div class="item">
-                <img src="/assets/bofaeast.jpg" alt="#" class="img-responsive" alt="Responsive image">
+                <img src="/assets/transamericaeast.jpg" alt="#" class="img-responsive" alt="Responsive image">
                 <div class="carousel-caption">
                   <!-- <h3> Link to Profile</h3> -->
                 </div>
             </div>
             <div class="item">
-                <img src="/assets/bofasouth.jpg" alt="#" class="img-responsive" alt="Responsive image">
+                <img src="/assets/transamericasouth.jpg" alt="#" class="img-responsive" alt="Responsive image">
                 <div class="carousel-caption">
                   <!-- <h3>Link to Profile</h3> -->
                 </div>
             </div>
             <div class="item">
-                <img src="/assets/bofawest.jpg" alt="#" class="img-responsive" alt="Responsive image">
+                <img src="/assets/transamericawest.jpg" alt="#" class="img-responsive" alt="Responsive image">
                 <div class="carousel-caption">
                   <!-- <h3>Link to Profile</h3> -->
                 </div>
@@ -58,7 +58,7 @@
     <div class="col-md-3">
       <div class="product-image-container">
         <center>
-          <img src="/assets/bofanorth.jpg" id="picture"/>
+          <img src="/assets/transamericanorth.jpg" id="picture"/>
         </center>
       </div>  
     </div>
@@ -66,21 +66,21 @@
     <div class="col-md-3">
       <div class="product-image-container">
         <center>
-          <img src="/assets/bofaeast.jpg" id="picture"/>
+          <img src="/assets/transamericaeast.jpg" id="picture"/>
         </center>
       </div>  
     </div>
     <div class="col-md-3">
       <div class="product-image-container">
         <center>
-          <img src="/assets/bofasouth.jpg" id="picture"/>
+          <img src="/assets/transamericasouth.jpg" id="picture"/>
         </center>
       </div>  
     </div>
     <div class="col-md-3">
       <div class="product-image-container">
         <center>
-          <img src="/assets/bofawest.jpg" id="picture"/>
+          <img src="/assets/transamericawest.jpg" id="picture"/>
         </center>
       </div>  
     </div>
