added new links

--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -42,7 +42,38 @@
 			<center>
 				<%= link_to "TRANSAMERICA", transamerica_path, class: "btn btn-primary" %>
 			</center>
-			
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-md-3 col-xs-3">
+			<center>
+				<%= link_to "GOLDENGATE", goldengate_path, class: "btn btn-primary" %>
+			</center>
+		</div>
+		<div class="col-md-3 col-xs-3">
+			<center>
+				<%= link_to "SUTRO TOWER", sutro_path, class: "btn btn-primary" %>
+			</center>
+		</div>
+		<div class="col-md-3 col-xs-3">
+			<center>
+				<%= link_to "AT&T PARK", att_path, class: "btn btn-primary" %>
+			</center>
+		</div>
+		<div class="col-md-3 col-xs-3">
+			<center>
+				<%= link_to "BAY BRIDGE", baybridge_path, class: "btn btn-primary" %>
+			</center>
 		</div>
 	</div>
 </div>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+
