added a brief description

--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -11,6 +11,15 @@
 	</div>	
 </section>
 <div class="container-fluid">
+<br>
+	<ul>
+		<li>Explore locations from a North, South, West & East vantage point</li>
+		<li>Join the community, add your picture to one of these locations here</li>
+		<li>Got a new location that would look cool from NSEW??</li>
+	</ul>	
+</div>
+
+<div class="container-fluid">
 	<div class="row">
 		<br>
 		<center>
