added pic of sf

--- a/app/assets/stylesheets/statics.scss
+++ b/app/assets/stylesheets/statics.scss
@@ -25,3 +25,10 @@
 #explore {
 	margin: 0px;
 }
+
+.sfmap .sfmap {
+	background-image: url("sfdesign.png");
+	background-size: cover;
+	width: 100%;
+	height: 500px;
+}
