--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -12,22 +12,36 @@
 </section>
 <div class="container-fluid">
 <br>
+<br>
+<br>
+<br>
+<br>
 	<ul>
 		<li>Explore locations from a North, South, West & East vantage point</li>
 		<li>Join the community, add your picture to one of these locations here</li>
 		<li>Got a new location that would look cool from NSEW??</li>
-	</ul>	
+	</ul>
+	<br>
+	<br>
+	<br>	
+</div>
+<div class="container">
+<section>
+	<div class="sfmap">
+		<div class="sfmap">
+			<center>
+				<br>
+				<a href="/sf">
+			<h1>San Francisco</h1>
+			</a>
+				
+			</center>
+		</div>
+	</div>	
+</section>
 </div>
 
 <div class="container-fluid">
-	<div class="row">
-		<br>
-		<center>
-			<a href="/sf">
-			<h1>San Francisco</h1>
-			</a>
-		</center>
-	</div>
 	<br>
 	<div class="row">
 		<br>
