--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -4,7 +4,8 @@
 		<div class="main-image">
 			<center>
 				<br>
-				<h2 id="explore">Explore locations with perspective</h2>
+				<h2 id="explore">Explore Locations From All Sides</h2>
+				<h2 id="explore">(North, South, East & West)</h2>
 				
 			</center>
 		</div>
@@ -16,11 +17,10 @@
 <br>
 <br>
 <br>
-	<ul>
-		<li>Explore locations from a North, South, West & East vantage point</li>
-		<li>Join the community, add your picture to one of these locations here</li>
-		<li>Got a new location that would look cool from NSEW??</li>
-	</ul>
+
+	<p><span class="glyphicon glyphicon-camera"></span>&emsp;&emsp;Follow the compass to see your favorite locations from a North, South, East & West vantage point</p>
+	<p><span class="glyphicon glyphicon-arrow-up"></span><span class="glyphicon glyphicon-arrow-down"></span>&emsp;Vote your favorite pictures up or down looking North, South, East or West</p>
+	<p><span class="glyphicon glyphicon-plus"></span>&emsp;&emsp;Join the community, upload a picture facing North, South, East or West of a location</p>
 	<br>
 	<br>
 	<br>	
