--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -11,16 +11,19 @@
 		</div>
 	</div>	
 </section>
-<div class="container">
+<div class="container-fluid">
+	<br>
 	<div class="row">
 	<br>
 	<br>
 	<br>
-		<div class="col-md-4 col-xs-4">
-
-				<%= image_tag "/assets/navigation.png" %>
+		<div class="col-md-4 col-xs-3">
+			<center>
+				<%= image_tag "/assets/navcompass.png" %>
+			</center>
 		</div>
-		<div class="col-md-8 col-xs-8">
+		<div class="col-md-8 col-xs-9">
+			<br>
 			<p><span class="glyphicon glyphicon-camera"></span>&emsp;&emsp;Follow the compass to see your favorite locations from a North, South, East & West vantage point</p>
 			<p><span class="glyphicon glyphicon-arrow-up"></span><span class="glyphicon glyphicon-arrow-down"></span>&emsp;Vote your favorite pictures up or down looking North, South, East or West</p>
 			<p><span class="glyphicon glyphicon-plus"></span>&emsp;&emsp;Join the community, upload a picture facing North, South, East or West of a location</p>
