changed padding on home button

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,3 +28,11 @@
 	padding-left: 450px;
 	padding-top: 25px;
 }
+
+#navbar-container {
+	padding-left: 0px;
+}
+
+#bs-example-navbar-collapse-1 {
+	padding-left: 0px;
+}
