--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-default">
-		  <div class="container-fluid">
+		  <div class="container-fluid" id="navbar-container">
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
 		        <li id="home"><%= link_to "Home", root_path, class: "home" %></li>
