--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,13 @@
 		        <li id="title"><%= full_title(yield(:title)) %></li>
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
-				<!-- login/logout -->
+	    			<% if logged_in? %>
+						<li id="hamburger"><%= link_to "Profile", profile_path, class: "hamburger" %></li>	
+						<li id="hamburger"><%= link_to "Log out", logout_path, class: "hamburger" %></li>								
+					<% else %> 
+						<li id="hamburger"><%= link_to "Login", login_path, class: "hamburger" %></li>
+						<li id="hamburger"><%= link_to "Sign Up", signup_path, class: "hamburger" %></li>
+					<% end %>
 		      </ul>
 		    </div>
 		  </div>
@@ -29,3 +35,4 @@
 	
 	</body>
 </html>
+
